# orbitbg

./: .gitignore  CMakeLists.txt  PKGBUILD
include/: cfg.h  comptime.hpp  consts.h  gfx.h  log.hpp  mmath.h  planet.h  render.h  result.hpp  shader.hpp  slice.h
pre-build/src/: main.c
res/: orbitbg.service  orbitbg.timer
src/: cfg.c  gfx.c  main.c  main.cpp  orbit.c  render.c  shader.cpp
